<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <EditText
        android:id="@+id/recording_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/recording_title"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/buttonRecord"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/recording_catagory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recording_catagory"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/recording_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/buttonRecord"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"

        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_button"
        android:colorAccent="#ff0000"
        android:text="Record"
        app:backgroundTint="#FF0000"
        app:iconTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:rippleColor="#FF0000"
        app:strokeColor="#F80000" />
</androidx.constraintlayout.widget.ConstraintLayout>